--- a/style.css
+++ b/style.css
@@ -1,26 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.header{
-    background-color: #36486b;
+body{
     display: flex;
-    padding: 20px;
-    font-size: 24px;
-    color: white;
-    justify-content: space-around;
-    font-weight: bold;
+    flex-direction: column;
 }
 
-a{
-    text-decoration: none;
-    font-size: 16px;
-    color: white;
+ul{
+    display: flex;
 }
 
-.links{
-    display: flex;
-    font-weight: normal;
-    align-items: center;
-    gap: 16px;
+header{
+    background-color: #1f2937;
 }
