--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
 body{
     display: flex;
     flex-direction: column;
+    padding: 0px;
+    margin: 0px;
 }
 
 ul{
     display: flex;
+    list-style-type: none;
+    justify-content: space-evenly;
+    align-items: center;
 }
+.leftheader{
+    font-weight: bold;
+    color: #f9faf8;
+    font-size: 24px;
+}
+.rightheader{
+    display: flex;
+    gap: 12px;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
 
 header{
     background-color: #1f2937;
+}
+
+a{
+    text-decoration: none;
+    color: white;
 }
