--- a/style.css
+++ b/style.css
@@ -5,12 +5,20 @@ body{
     margin: 0px;
 }
 
+.container{
+    display: flex;
+    justify-content: space-evenly;
+    min-height: 500px;
+    align-items: center;
+}
+
 ul{
     display: flex;
     list-style-type: none;
     justify-content: space-evenly;
     align-items: center;
 }
+
 .leftheader{
     font-weight: bold;
     color: #f9faf8;
@@ -23,6 +31,10 @@ ul{
     font-size: 18px;
 }
 
+img{
+    height: 250px;
+    width: 600px;
+}
 
 header{
     background-color: #1f2937;
@@ -30,5 +42,12 @@ header{
 
 a{
     text-decoration: none;
+    color: white;
+}
+
+
+
+.leftcontainer{
+    margin-left: 200px;
     color: white;
 }
