--- a/style.css
+++ b/style.css
@@ -48,6 +48,17 @@ a{
 
 
 .leftcontainer{
-    margin-left: 200px;
+    margin-left: 250px;
     color: white;
+}
+
+button{
+    background:#3882f6;
+    color: white;
+    padding-top: 8px;
+    padding-left:25px ;
+    padding-right:25px;
+    padding-bottom: 8px;
+    border-radius: 8px;
+    font-weight: bold;
 }
