--- a/style.css
+++ b/style.css
@@ -31,9 +31,17 @@ ul{
     font-size: 18px;
 }
 
-img{
-    height: 250px;
-    width: 600px;
+.rightcontainer{
+    display: flex;
+    max-height: 180px;
+    max-width: 500px;
+    align-items: center;
+}
+
+.rightcontainer img{
+    max-width: 100%;
+    max-height: 100%;
+    
 }
 
 header{
@@ -48,7 +56,7 @@ a{
 
 
 .leftcontainer{
-    margin-left: 250px;
+    margin-left: 200px;
     color: white;
 }
 
@@ -74,5 +82,24 @@ button{
     font-weight: 800;
     font-size: 36px;
     color: #1f2937;
-    margin-top: 0px;
+    margin-bottom: 10px;
 }
+.bottomimages{
+    display: flex;
+    justify-content: space-evenly;
+    padding:10px 400px; 
+}
+ .imagecontainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-basis: 100%;
+} 
+
+.imagecontainer img{
+    max-width: 200px;
+    max-height: 200px;
+    border: 5px #3882f6 solid;
+    border-radius: 20px;
+    flex:1;
+} 
