--- a/style.css
+++ b/style.css
@@ -107,12 +107,25 @@ button{
 
 .quotecontainer{
     display: flex;
+    flex-direction: column;
     min-height: 300px;
     min-width: 300px;
-    justify-content: center;
     align-items: center;
     background: #e5e7eb;
     font-size: 36px;
     font-style: italic;
     color: #1f2937;
+}
+.quotecontainer p:nth-of-type(1)
+{
+    margin-bottom: 0px;
+}
+.quotecontainer p:nth-of-type(2){
+    margin: 0px;
+    padding: 0px;
+    margin-left: 700px;
+    color: #1f2937;
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 10px;
 }
